Implemented: - Algorithm for binary pass based on weights; - Line entity for better collisions control; - GSAP animations for ball and pegs; - Statistic counter;

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Plinko</title>
 </head>
 <body>
+    <div id="statistic"></div>
     <script src='./bundle.js'></script>
 </body>
 </html>
